# scrape-bot

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  recipes.py  settings.py
extract/: __init__.py  extract.py
extract/scraper/: __init__.py  controller.py  crawler.py  execute.py
flatfiles/clean/: export_audible_clean.csv  export_audible_clean_20260325.csv  export_audible_clean_20260326.csv  export_audible_clean_20260327.csv
flatfiles/dirty/: export_audible_dirty_20260324.csv  export_audible_dirty_20260325.csv  export_audible_dirty_20260326.csv  export_audible_dirty_20260327.csv  export_audible_scrape.csv
load/: __init__.py  snowflake_stage.py
notification/: __init__.py  email.py
src/: main.py  scrap.ipynb
src/extract/: __init__.py  extract.py  settings.py
src/extract/scraper/: __init__.py
src/flow/: __init__.py  audible.py
src/load/: __init__.py  snowflake_stage.py
src/notification/: __init__.py  email.py
src/output/: export_audible_dirty_20260524.csv
src/scraper/: __init__.py  bot.py  primitives.py
src/scraper/bs4/: __init__.py  module.py  primitives.py  settings.py
src/scraper/logger/: __init__.py  module.py  palette.py  primitives.py  settings.py
src/scraper/routines/: __init__.py  audible.py  locators.py  schema.py  settings.py
src/scraper/routines/audible/: __init__.py  audible.py  audible_2.py  locators.py  settings.py
src/scraper/routines/jason_thoughtleader/: locators.py  routine.py  settings.py
src/scraper/selenium/: __init__.py  exceptions.py  module.py  settings.py
src/scraper/timing/: __init__.py  module.py  settings.py
src/scraper/writer/: __init__.py  modules.py  settings.py
src/transform/: __init__.py  all.py  base.py  simple.py
src/yetl/: __init__.py
src/yetl/extract/: __init__.py  extract.py  settings.py
src/yetl/load/: __init__.py  settings.py  snowflake_stage.py
src/yetl/notification/: __init__.py  email.py  settings.py
src/yetl/scraper/: __init__.py  bot.py
src/yetl/scraper/bs4/: __init__.py  module.py  primitives.py  settings.py
src/yetl/scraper/logger/: __init__.py  module.py  palette.py  settings.py
src/yetl/scraper/routines/: __init__.py
src/yetl/scraper/routines/audible/: audible.py  audible_2.py  locators.py  schema.py  settings.py
src/yetl/scraper/routines/jason_thoughtleader/: __init__.py  locators.py  routine.py  settings.py
src/yetl/scraper/selenium/: __init__.py  module.py  primitives.py  settings.py
src/yetl/scraper/timing/: __init__.py  module.py  settings.py
src/yetl/scraper/writer/: __init__.py  modules.py  settings.py
src/yetl/transform/: __init__.py  base.py  datetime.py  dtype.py  null.py  simple.py  string.py
test/test_load/: test_snowflake_conn.py
test/test_scraper/: test_audible.py
tests/test_scraper/test_bs4/: test_primitives.py
tests/test_scraper/test_writer/: test_modules.py
transform/: __init__.py  steps.py  utils.py
