[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "yetl"
version = "0.1.0"
authors = [
    { name = "Stan Nguyen (Totori Yoyori)", email = "stan.mng@gmail.com" }
]
description = "Micro-framework for building ETL pipelines, optimized for performance and developer speed."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "httpx>=0.27",
    "asyncer>=0.0.7",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
scraper = [
    "beautifulsoup4>=4.12",
    "selenium>=4.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]
load = [
    "snowflake-connector-python>=3.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "missingno>=0.5",
    "thefuzz>=0.22",
]
all = [
    "yetl[scraper,load,viz]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ipykernel>=6.0",
    "prefect>=3.0",
]

[project.urls]
Homepage = "https://github.com/TotoriYoyori/scrape-bot"
Issues = "https://github.com/TotoriYoyori/scrape-bot/issues"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.hatch.build.targets.wheel]
packages = ["src/yetl"]
